# AndroidLibBoxLite

./: .gitignore  README.md  README_zh_CN.md  pyproject.toml
.github/workflows/: build-release.yml  check.yml  discover-upstream.yml
androidlibboxlite/: __init__.py  archive.py  build.py  errors.py  github_api.py  lockfile.py  manifest.py  process.py  release.py  semver.py  toolchains.py  verify.py
config/: baseline.json
locks/: v1.14.0-alpha.47.json  v1.14.0-alpha.48.json  v1.14.0-alpha.50.json  v1.14.0-beta.1.json
scripts/: build_libbox.py  create_manifest.py  discover_upstream.py  normalize_aar.py  resolve_toolchain.py  validate_release.py  verify_artifacts.py
tests/: fixtures.py  test_archive.py  test_build.py  test_errors.py  test_github_api.py  test_lockfile.py  test_manifest.py  test_process.py  test_release_identity.py  test_semver.py  test_toolchains.py  test_verify.py  test_workflows.py
